feat: add English globe key ignore delay and refactor settings page